--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "ng-multiselect-dropdown": "^0.2.10",
+    "ng2-date-picker": "^8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
